# SdlWidgets

./: .gitignore  CMakeLists.txt  Makefile  README.md  Sdl.hpp  SdlWidget.cbp  SdlWidget.cpp  SdlWidget.hpp  SdlWidgets.cbp  SdlWindow.hpp  fuggveny.cbp
SDL_gfx/: Makefile  SDL_gfxBlitFunc.cpp  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.h
src/: Property.hpp  PropertyNull.hpp  SDL_custom.cpp  SDL_custom.hpp  Sdl.cpp  Sdl.hpp  SdlEvent.hpp  SdlFont.cpp  SdlFont.hpp  SdlKeys.hpp  SdlRenderer.cpp  SdlRenderer.hpp  SdlSurface.cpp  SdlSurface.hpp  SdlTexture.cpp  SdlTexture.hpp  SdlTheme.cpp  SdlTheme.hpp  SdlTimer.cpp  SdlTimer.hpp  SdlWidget.cpp  SdlWidget.hpp  SdlWidgets.hpp  SdlWindow.cpp  SdlWindow.hpp  WidgetButton.cpp  WidgetButton.hpp  WidgetColorBox.cpp  WidgetColorBox.hpp  WidgetContainer.cpp  WidgetContainer.hpp  WidgetLabel.cpp  WidgetLabel.hpp  WidgetPanel.cpp  WidgetPanel.hpp  WidgetSlider.cpp  WidgetSlider.hpp  WidgetTextBox.cpp  WidgetTextBox.hpp  WidgetWindow.cpp  (+2 more)
src/SDL_gfx/: SDL_gfxPrimitives.cpp
